--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,3 +14,8 @@ Registro de cambios realizados al proyecto durante el desarrollo.
 ## [14/04/2025] - 🧱 Estructura del Proyecto
 - Se organiza la estructura de carpetas: `CSS/`, `JS/`, `VIEW/`.
 -- Se añade el archivo `login.html` y 'register.html'.
+
+---
+
+## [Próximas entradas...]
+- Aquí irán futuras actualizaciones con fecha y descripción.
